now docker compose and image works